--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:overScrollMode="ifContentScrolls"
         tools:context=".IconActivity" />
 
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 </RelativeLayout>
