--- a/res/layout/activity_event_editor.xml
+++ b/res/layout/activity_event_editor.xml
@@ -82,13 +82,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="搜尋" />
-            <Button
-                android:id="@+id/OK"
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="確認" />
+             <ImageButton
+			     android:id="@+id/OK"
+			     style="?android:attr/buttonStyleSmall"
+			     android:layout_width="50dp"
+		   		 android:layout_height="50dp"
+			     android:layout_weight="1"
+			     android:src="@drawable/map_marker" 
+			     android:scaleType="centerInside"/>
 
         </LinearLayout>
         
