--- a/res/layout/activity_main_parts_quick_add_box.xml
+++ b/res/layout/activity_main_parts_quick_add_box.xml
@@ -29,16 +29,17 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="15"
+            android:ems="20"
             android:height="50dp"
             android:imeOptions="normal"
             android:inputType="text"
+            android:maxEms="50"
             android:maxLength="256"
             android:minHeight="50dp"
-            android:shadowColor="#FFFFFF"
+            android:shadowColor="@color/actionbar"
             android:shadowDx="0"
             android:shadowDy="0"
-            android:shadowRadius="5"
+            android:shadowRadius="3"
             android:singleLine="false"
             android:textColor="#333333"
             android:textSize="14sp"
@@ -49,6 +50,7 @@
             android:layout_width="60dp"
             android:layout_height="fill_parent"
             android:background="@drawable/dock_divider_land"
+            android:clickable="false"
             android:contentDescription="TODO"
             android:scaleType="centerInside"
             android:src="@drawable/ic_action_new_event" />
