--- a/res/layout/card_cursor_inner_content.xml
+++ b/res/layout/card_cursor_inner_content.xml
@@ -27,6 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:lines="1"
+        android:maxEms="15"
+        android:maxLines="1"
         android:text="card_cursor_main_inner_title"
         android:textColor="@color/card_ThirdTittle"
         android:textSize="15sp"
@@ -37,9 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/card_cursor_main_inner_title"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/card_cursor_main_inner_title"
+        android:lines="1"
+        android:maxEms="15"
+        android:maxLines="1"
         android:text="card_cursor_main_inner_subtitle"
         android:textColor="@color/card_SubTittle"
         android:textSize="15sp" />
@@ -50,11 +54,11 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/card_cursor_main_inner_subtitle"
         android:layout_below="@+id/card_cursor_main_inner_subtitle"
-        android:layout_marginTop="10dp"
         android:text="card_cursor_main_inner_thirdtitle"
         android:textColor="@color/PagerSlidingTabStrip_dividerColor"
         android:textSize="15sp"
-        android:textStyle="bold"  />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
 </RelativeLayout>
 
