--- a/res/layout/card_cursor_layout.xml
+++ b/res/layout/card_cursor_layout.xml
@@ -25,31 +25,32 @@
     android:layout_height="wrap_content">
 
     <!-- Card visible layout -->
+
     <LinearLayout
         android:id="@+id/card_main_layout"
         style="@style/card.main_layout"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
         <it.gmariotti.cardslib.library.view.component.CardThumbnailView
-            style="@style/card_thumbnail_outer_layout"
             android:id="@+id/card_thumbnail_layout"
+            style="@style/card_thumbnail_outer_layout"
             android:layout_width="wrap_content"
-            card:card_thumbnail_layout_resourceID="@layout/card_cursor_thumbnail_layout"
-            android:layout_height="match_parent" />
+            android:layout_height="50dp"
+            card:card_thumbnail_layout_resourceID="@layout/card_cursor_thumbnail_layout" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
             <it.gmariotti.cardslib.library.view.component.CardHeaderView
-                style="@style/card.header_outer_layout"
                 android:id="@+id/card_header_layout"
-                android:layout_weight="1"
+                style="@style/card.header_outer_layout"
                 android:layout_width="match_parent"
-                android:layout_height="0dip" />
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <!-- Main Content View -->
 
@@ -64,9 +65,10 @@
     </LinearLayout>
     <!-- Compound view for Shadow
            If you want to customize this element use attr card:card_shadow_layout_resourceID -->
+
     <it.gmariotti.cardslib.library.view.component.CardShadowView
-        style="@style/card.shadow_outer_layout"
         android:id="@+id/card_shadow_layout"
+        style="@style/card.shadow_outer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
