--- a/res/layout/card_cursor_thumbnail_layout.xml
+++ b/res/layout/card_cursor_thumbnail_layout.xml
@@ -20,7 +20,7 @@
     android:id="@+id/card_thumbnail_image"
     style="@style/card_thumbnail_image"
     android:layout_width="55dp"
-    android:layout_height="40dp"
+    android:layout_height="match_parent"
     android:contentDescription="@string/app_name"
-    android:scaleType="centerCrop" />
+    android:scaleType="centerInside" />
 
