--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -73,4 +73,14 @@
     <dimen name="card_shadow_view_margin_bottom">0dp</dimen>
     <dimen name="card_shadow_view_margin_right">@dimen/card_background_default_radius</dimen>
 
+    
+    
+    <!-- task_editor_parts -->
+    <dimen name="task_editor_parts_layout_margin_Left_Right">20dp</dimen>
+    <dimen name="task_editor_parts_layout_margin_Top_Bottom">10dp</dimen>
+    <dimen name="task_editor_parts_layout_margin_Left_Right_button">15dp</dimen>
+    <dimen name="task_editor_parts_layout_mini_Height_button">32dip</dimen>
+    <dimen name="task_editor_parts_layout_mini_Right_imagebutton">10dp</dimen>
+ 
+   
 </resources>
