--- a/res/layout/activity_task_editor_parts_box_location.xml
+++ b/res/layout/activity_task_editor_parts_box_location.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/actionbar_text"
         android:orientation="vertical" >
 
         <TextView
@@ -13,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            android:text="到期日"
+            android:text="地點"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/task_editor_parts_layout_textview_color" />
 
@@ -28,8 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right_button"
                 android:layout_weight="1.00"
-                android:minHeight="32dp"
-                android:text="設定日期" />
+                android:minHeight="32dip"
+                android:text="設定目的地" />
 
             <ImageButton
                 android:id="@+id/imageButtonResetDate"
@@ -37,11 +36,22 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginRight="@dimen/task_editor_parts_layout_mini_Right_imagebutton"
-                android:layout_weight="0.15"
+                android:layout_weight="0.05"
                 android:background="@color/actionbar_text"
                 android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1.00"
+            android:scaleType="fitXY"
+            android:src="@drawable/tab_unselected_pressed_irdark" />
 
     </LinearLayout>
     
