--- a/res/layout/activity_task_editor_parts_box_option.xml
+++ b/res/layout/activity_task_editor_parts_box_option.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/actionbar_text"
         android:orientation="vertical" >
 
         <TextView
@@ -13,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            android:text="地點"
+            android:text="選項"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/task_editor_parts_layout_textview_color" />
 
@@ -22,26 +21,34 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/buttonSetDate"
+            <CheckBox
+                android:id="@+id/CheckBoxIsNoticeMeWhenClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right_button"
-                android:layout_weight="1.00"
-                android:minHeight="32dip"
-                android:text="Button" />
-
-            <ImageButton
-                android:id="@+id/imageButtonResetDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/task_editor_parts_layout_mini_Right_imagebutton"
+                android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
                 android:layout_weight="0.15"
-                android:background="@color/actionbar_text"
-                android:src="@android:drawable/ic_menu_close_clear_cancel" />
+                android:text="智慧通知" />
+
+            <CheckBox
+                android:id="@+id/CheckBoxRemind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+                android:layout_weight="0.15"
+                android:checked="true"
+                android:text="提醒我" />
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginTop="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/tab_unselected_pressed_irdark" />
 
     </LinearLayout>
     
