--- a/res/layout/activity_task_editor_parts_dialog_location_parts_search.xml
+++ b/res/layout/activity_task_editor_parts_dialog_location_parts_search.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+        android:orientation="horizontal" >
 
             <EditText
                 android:id="@+id/SearchText"
@@ -39,7 +32,6 @@
                 android:layout_weight="1"
                 android:scaleType="centerInside"
                 android:src="@drawable/map_marker" />
-        </LinearLayout>
-
+    
     </LinearLayout>
     
