--- a/res/layout/activity_task_editor_parts_box_content.xml
+++ b/res/layout/activity_task_editor_parts_box_content.xml
@@ -30,10 +30,16 @@
             <requestFocus />
         </MultiAutoCompleteTextView>
 
-        <include
+        <ImageView
+            android:id="@+id/imageView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/activity_task_editor_parts_box_baseline" />
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1.00"
+            android:scaleType="fitXY"
+            android:src="@drawable/tab_unselected_pressed_irdark" />
 
     </LinearLayout>
     
