--- a/res/layout/activity_task_editor_parts_box_option.xml
+++ b/res/layout/activity_task_editor_parts_box_option.xml
@@ -40,10 +40,15 @@
 
         </LinearLayout>
 
-        <include
+        <ImageView
+            android:id="@+id/imageView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/activity_task_editor_parts_box_baseline" />
+            android:layout_height="1dp"
+            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginTop="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/tab_unselected_pressed_irdark" />
 
     </LinearLayout>
     
