--- a/res/layout/activity_task_editor_parts_box_tittle.xml
+++ b/res/layout/activity_task_editor_parts_box_tittle.xml
@@ -2,19 +2,19 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:background="@color/background_window"
         android:orientation="vertical" >
 
         <MultiAutoCompleteTextView
             android:id="@+id/multiAutoCompleteTextViewTittle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/task_editor_parts_layout_margin_Top_Bottom"
             android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            android:background="@drawable/list_focused_irdark"
+            android:background="?android:attr/editTextBackground"
             android:ems="10"
             android:hint="工作標題"
             android:textColor="@color/task_editor_parts_layout_textview_color" >
