--- a/res/layout/activity_task_editor.xml
+++ b/res/layout/activity_task_editor.xml
@@ -16,6 +16,13 @@
     android:windowSoftInputMode="stateHidden"
     >
 
+    <FrameLayout
+        android:id="@+id/frameTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp" >
+
+    </FrameLayout>
+
     <include
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,11 +47,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/activity_task_editor_parts_box_location" />
-
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/activity_task_editor_parts_box_attachment" />
     
 </LinearLayout>
 </ScrollView>
