--- a/res/menu/editor_activity_actionbar.xml
+++ b/res/menu/editor_activity_actionbar.xml
@@ -2,10 +2,17 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item android:id="@+id/action_cancel"
+    <item android:id="@+id/action_show_all_field"
           android:title="action_cancel"
-          android:icon="@drawable/ic_action_cancel"
-          android:showAsAction="always"/>
+          android:icon="@drawable/ic_action_cancel" android:showAsAction="never"/>
+    
+    <item android:id="@+id/action_help"
+          android:title="action_cancel"
+          android:icon="@drawable/ic_action_cancel" android:showAsAction="never"/>
+    
+    <item android:id="@+id/action_show_page"
+          android:title="action_cancel"
+          android:icon="@drawable/ic_action_cancel" android:showAsAction="never"/>
 
     <item android:id="@+id/action_add"
           android:icon="@drawable/ic_action_add"
