--- a/res/layout/activity_task_editor_parts_box_duedate.xml
+++ b/res/layout/activity_task_editor_parts_box_duedate.xml
@@ -6,60 +6,38 @@
         android:background="@color/actionbar_text"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
-            android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            android:text="到期日"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/task_editor_parts_layout_textview_color" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+           android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/buttonSetDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right_button"
-                android:layout_weight="1.00"
-                android:minHeight="32dip"
-                android:text="設定日期" />
+            <EditText
+                android:id="@+id/editTextDueDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" 
+                android:layout_marginBottom="@dimen/task_editor_parts_layout_margin_Top_Bottom"
+            android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
+            
+                android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
+                android:layout_weight="2"
+                android:ems="10"
+                android:height="@dimen/task_editor_parts_EditText_Height" >
 
-            <Button
-                android:id="@+id/buttonSetTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:minHeight="32dip"
-                android:text="時間..." />
+                <requestFocus />
+            </EditText>
 
             <ImageButton
                 android:id="@+id/imageButtonResetDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginRight="@dimen/task_editor_parts_layout_mini_Right_imagebutton"
-                android:layout_weight="0.15"
+                android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+                android:layout_weight="9"
                 android:background="@color/actionbar_text"
-                android:src="@android:drawable/ic_menu_close_clear_cancel" />
+                android:scaleType="centerInside"
+                android:src="@drawable/tear_of_calendar" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
-            android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1.00"
-            android:scaleType="fitXY"
-            android:src="@drawable/tab_unselected_pressed_irdark" />
 
     </LinearLayout>
     
