--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -81,6 +81,8 @@
     <dimen name="task_editor_parts_layout_margin_Left_Right_button">15dp</dimen>
     <dimen name="task_editor_parts_layout_mini_Height_button">32dip</dimen>
     <dimen name="task_editor_parts_layout_mini_Right_imagebutton">10dp</dimen>
+    <dimen name="task_editor_parts_EditText_Font_Size">18dp</dimen>
+    <dimen name="task_editor_parts_EditText_Height">50dp</dimen>
  
    
 </resources>
