--- a/res/layout/activity_task_editor_parts_dialog_location.xml
+++ b/res/layout/activity_task_editor_parts_dialog_location.xml
@@ -10,8 +10,9 @@
         <fragment
             android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="me.iamcxa.remindme.provider.WorkaroundMapFragment" />
+            android:layout_height="400dip"
+            android:name="com.google.android.gms.maps.MapFragment" />
+            <!-- class="me.iamcxa.remindme.provider.WorkaroundMapFragment" />-->
 
         <include
             android:layout_width="match_parent"
