--- a/res/layout/activity_task_editor_parts_dialog_location_parts_search.xml
+++ b/res/layout/activity_task_editor_parts_dialog_location_parts_search.xml
@@ -24,7 +24,7 @@
                 android:layout_weight="3"
                 android:text="搜尋" />
 
-            <ImageButton
+            <!-- <ImageButton
                 android:id="@+id/OK"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="50dp"
@@ -32,6 +32,6 @@
                 android:layout_weight="1"
                 android:scaleType="centerInside"
                 android:src="@drawable/map_marker" />
-    
+    		 -->
     </LinearLayout>
     
