--- a/res/layout/activity_task_editor_parts_box_duedate.xml
+++ b/res/layout/activity_task_editor_parts_box_duedate.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/actionbar_text"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:orientation="horizontal" >
+            android:background="@color/actionbar_text"
+            android:orientation="horizontal" >
 
             <EditText
                 android:id="@+id/editTextDueDate"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" 
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-            
                 android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
-                android:layout_weight="2"
+                android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
+                android:layout_weight="2.5"
                 android:ems="10"
-                android:height="@dimen/task_editor_parts_EditText_Height" >
-
-                <requestFocus />
+                android:height="@dimen/task_editor_parts_EditText_Height" android:inputType="datetime">
+  
             </EditText>
 
             <ImageButton
@@ -33,11 +25,12 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
                 android:layout_weight="9"
-                android:background="@color/actionbar_text"
+                android:background="@null"
                 android:scaleType="centerInside"
-                android:src="@drawable/tear_of_calendar" />
+                android:src="@drawable/taskeditor_btn_duedate_background"
+                android:visibility="visible" android:contentDescription="TODO">
 
-        </LinearLayout>
+            </ImageButton>
+</LinearLayout>
 
-    </LinearLayout>
     
