--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,44 +2,22 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/RelativeLayout"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/loading_frame"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:focusable="true"
-        android:focusableInTouchMode="true" >
+        android:overScrollMode="always"
+        android:visibility="visible" >
 
-       
-        <fragment
-            android:id="@+id/QucikAddBoxFragment"
-            android:name="me.iamcxa.remindme.editor.QucikAddBoxFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:overScrollMode="always" >
+    </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/QucikAddBoxFragment" />
-      
-    </RelativeLayout>
-        <!--
-         As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions.
-        -->
-        
-   <!-- android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         The drawer is given a fixed width in dp and extends the full height of
-         the container. A solid background is used for contrast
-         with the content view. -->
+
 
     <ListView
         android:id="@+id/left_drawer"
