--- a/res/layout/activity_task_editor_parts_box_duedate.xml
+++ b/res/layout/activity_task_editor_parts_box_duedate.xml
@@ -14,7 +14,9 @@
                 android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
                 android:layout_weight="2.5"
                 android:ems="10"
-                android:height="@dimen/task_editor_parts_EditText_Height" android:inputType="datetime">
+                android:height="@dimen/task_editor_parts_EditText_Height"
+                android:hint="@string/TaskEditor_Field_DueDate_Hint"
+                android:inputType="datetime" >
   
             </EditText>
 
