--- a/res/layout/activity_task_editor_parts_box_title.xml
+++ b/res/layout/activity_task_editor_parts_box_title.xml
@@ -7,17 +7,17 @@
         android:orientation="vertical" >
 
         <MultiAutoCompleteTextView
-            android:id="@+id/multiAutoCompleteTextViewTittle"
+            android:id="@+id/multiAutoCompleteTextViewTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/task_editor_parts_layout_margin_Top_Bottom"
             android:layout_marginLeft="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
+            android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
             android:background="?android:attr/editTextBackground"
             android:ems="10"
-        android:layout_marginBottom="@dimen/task_editor_parts_layout_margin_Top_Bottom"
-        android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
             android:height="@dimen/task_editor_parts_EditText_Height"
-            android:hint="任務"
+            android:hint="@string/TaskEditor_Field_Title_Hint"
             android:textColor="@color/task_editor_parts_layout_textview_color" >
 
             <requestFocus />
