--- a/res/values/string_Main_Cards.xml
+++ b/res/values/string_Main_Cards.xml
@@ -5,10 +5,9 @@
     <!-- String -->
     <string-array name="Array_Task_List_Card_Long_Clcik_String">
         <item>修改</item>
-        <item>刪除</item>
-s                                <item>提高優先權</item>
-        <item>降低優先權</item>
-        <item>分享</item>
+        <item>刪除此任務</item>
+		<item>提前一天</item>
+        <item>延後一天</item>
     </string-array>
     <!-- Value -->
     <string-array name="Array_Task_List_Card_Long_Clcik_Value">
