--- a/res/layout/activity_task_editor_parts_box_category.xml
+++ b/res/layout/activity_task_editor_parts_box_category.xml
@@ -15,7 +15,8 @@
             android:layout_marginRight="@dimen/task_editor_parts_layout_margin_Left_Right"
             android:layout_marginTop="@dimen/task_editor_parts_layout_margin_Top_Bottom"
             android:height="@dimen/task_editor_parts_EditText_Height"
-            android:minHeight="40dp" />
+            android:minHeight="40dp"
+            android:prompt="@string/spinner_category_prompt" />
 
     </LinearLayout>
     
