--- a/res/values/string_Editor.xml
+++ b/res/values/string_Editor.xml
@@ -22,14 +22,18 @@
     </string-array>
     
     <string name="TaskEditor_Title_Is_Empty">您需要輸入任務名稱。</string>
-    <string name="TaskEditor_Field_Title_Hint">任務</string>
-    <string name="TaskEditor_Field_DueDate_Hint">到期日</string>
-    <string name="TaskEditor_Field_Project_Hint">專案</string>
-    <string name="TaskEditor_Field_Tag_Hint">標籤</string>
-    <string name="TaskEditor_Field_Priority_Hint">優先等級</string>
     <string name="TaskEditor_Field_Inbox">任務盒</string>
-   
-   
+    
+     <!-- Textview string -->
+    <string name="Textview_Title_Hint">任務</string>
+    <string name="Textview_DueDate_Hint">到期日</string>
+    
+  
+    <!-- Spinner string -->
+    <string name="spinner_category_prompt">分類</string>
+    <string name="spinner_tag_prompt">標籤</string>
+    <string name="spinner_project_prompt">專案</string>
+    <string name="spinner_priority_prompt">緊急程度</string>
     
     
     
